tests/sumo/extended/calibrator/errors/vClass_mismatch/errors.sumo.meso
Error: Vehicle 'cali.0.0' is not allowed to depart on any lane of edge 'beg2'.
Quitting (on error).
